Formatting & Comments cleanup

--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
 </div>
 
 <section class="social">
+<!-- SOCIAL ICON SET-->
+
 	<ul class="social-set">
 		<!-- GitHub -->
 		<li><a class="sociali" href="https://github.com/sarahdurks" target="_blank" aria-label="GitHub">
@@ -152,6 +154,7 @@
 </section>
 
 <!--FOOTER + SOCIAL ICONS-->
+
 <div class="footer centered">
 	<footer>
 	<div class="footer-content">
