trying to fix image sizing/wrapping

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="./assets/css/style.css">
-<script
-      src="https://use.fontawesome.com/83ac61cd0f.js"
+<script src="https://use.fontawesome.com/83ac61cd0f.js"
     ></script>
 <title>Sarah Durkin's Portfolio | SarahDurks.Github.io</title>
 <link rel="shortcut icon" type="image/jpg" href="./assets/images/lion.png">
@@ -64,20 +63,16 @@
 <div class="horizontal-line">
 	<hr>
 </div>
-<div class="portfolio-content">
-    <!-- Project 1: About -->
-   
-		<figure class="pointer-cursor">
-		<a href="https://www.actionnetwork.com/about"><img src="./assets/images/about.png" alt="about us page at Action Network" class="img-responsive">
-		<figcaption>
+
+	<!-- Project 1: About -->
+	<wrapper>
+		<a href="https://www.actionnetwork.com/about"><img src="./assets/images/about.png" alt="about us page at Action Network" class="img-max">
 		<h3>About Us Page</h3></a>
-		<p>'About us' page created by my team. </p>
-		</figcaption>
-		</figure>
+		<p>'About us' page created by my team, not me. </p>
+	</wrapper>
 	
-	
+	<div class="portfolio-content">
      <!-- Project 2: Horiseon -->
-    
 		<figure class="pointer-cursor">
     <a href="https://sarahdurks.github.io/horiseon-bootcamp/">
     <img src="./assets/images/horiseon.png" alt="Horiseon Marketing Agency website preview" class="img-responsive">
@@ -86,15 +81,14 @@
 		<p>Demo marketing website made with HTML, CSS.</p>
 		</figcaption>
 		</figure>
-	  
 	
-     <!-- Project 3: Navigation-->
+    <!-- Project 3: Navigation -->
 	 <figure class="pointer-cursor">
     <a href="https://www.actionnetwork.com">
     <img src="./assets/images/navmenu.png" alt="Navigation menu on Action Network" class="img-responsive">
     <figcaption>
 		<h3>Navigation Menu</h3></a>
-		<p>	Navigation menu created by my team.</p>
+		<p>	Navigation menu created by my team, not me.</p>
 		</figcaption>
 		</figure>
 	 
@@ -112,7 +106,7 @@
 		<a href="https://www.actionnetwork.com/online-sports-betting/tennessee"><img src="./assets/images/state.png" alt="State page project" class="img-responsive">
 		<figcaption>
 		<h3>State Page</h3></a>
-		<p>State page created by my team. </p>
+		<p>State page created by my team, not me. </p>
 		</figcaption>
 		</figure>
 	</div>
