cleaning up spacing semantic html  and grid work

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<h1 class=""><span class="title">Hey, I'm sarahdurks &#129409;</span>
 		</h1>
 		<p class="">
-			<span class="jumbo-caption">I'm a marketer & SEO trying to learn about web developmentat at UC Berkeley's Coding Bootcamp.</span>
+			<span class="jumbo-caption">I'm a marketer & SEO trying to learn about web development at at UC Berkeley's Coding Bootcamp.</span>
 		</p>
 		<p class="">
 			<a href="#portfolio" class="btn" role="button">View Portfolio</a>
@@ -37,7 +37,7 @@
 </div>
 </div>
 
-<!-- ABOUT  SECTION-->
+<!-- ABOUT SECTION-->
 <div class="about centered" id="about">
 <div class="about-content">
 	<div class="about-avatar">
@@ -56,22 +56,18 @@
 </div>
 </div>
 <!-- PORTFOLIO -->
-<div class="portfolio centered" id="portfolio">
+<wrapper class="portfolio centered" id="portfolio">
 <p>
 	<h2>Portfolio</h2>
 </p>
-<div class="horizontal-line">
-	<hr>
-</div>
-
-	<!-- Project 1: About -->
-	<wrapper>
+	<!-- Project 1: Hero Feature About Us -->
+	<section class="portfolio-feature">
 		<a href="https://www.actionnetwork.com/about"><img src="./assets/images/about.png" alt="about us page at Action Network" class="img-max">
 		<h3>About Us Page</h3></a>
 		<p>'About us' page created by my team, not me. </p>
-	</wrapper>
+	</section>
 	
-	<div class="portfolio-content">
+	<section class="portfolio-content">
      <!-- Project 2: Horiseon -->
 		<figure class="pointer-cursor">
     <a href="https://sarahdurks.github.io/horiseon-bootcamp/">
@@ -109,21 +105,18 @@
 		<p>State page created by my team, not me. </p>
 		</figcaption>
 		</figure>
-	</div>
+	</section>
+	</wrapper>
 
-<!-- CONTACT -->
-<section id="contact">
-<h2>Contact Me</h2>
-<div class="horizontal-line"> <hr> </div>
-<section class="social">
-
-<!-- SOCIAL ICON SET-->
+<!-- CONTACT + SOCIAL ICON SET-->
+<section id="contact" class="centered">
+	<h2>Contact Me</h2>
 	<ul class="social-set">
 		<!-- GitHub -->
 		<li><a class="sociali" href="https://github.com/sarahdurks" target="_blank" aria-label="GitHub">
 		  <i class="fa fa-github-square fa-fw" title="GitHub"></i></a></li>
 		
-		<!-- GitLab-->
+		<!-- GitLab -->
 		 <li><a class="sociali" href="https://gitlab.com/sarahdurks" target="_blank" aria-label="GitLab">
 			<i class="fa fa-gitlab fa-fw" title="GitLab"></i></a></li>
 		 
@@ -145,13 +138,10 @@
 	</ul>
 </section>
 
-<!--FOOTER + SOCIAL ICONS-->
-<div class="footer centered">
+<!--FOOTER -->
 	<footer>
-	<div class="footer-content">
 		<p><a href="#top">^ Go back to top</a></p>
 	<p>Created by <a href="https://github.com/sarahdurks">sarahdurks 2021</a></p>
 	</footer>
-</div>
 </body>
 </html>
