Comments for clarity in code, removed extra photos/files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>🦁 Sarah Durkin Portfolio | SEO & Full Stack in Training</title>
+    <meta name="description" content="Sarah Durkin's demo portfolio for bootcamp.">
     <link rel="stylesheet" href="./assets/css/style.css" /> 
+    
     <script
     src="https://use.fontawesome.com/releases/v5.15.2/js/all.js"
     data-search-pseudo-elements
@@ -50,48 +52,48 @@
     <section class="page-section" id="work">
       <h2>Work</h2>
       <div class="grid-container">
-
+        <!-- Feature Project #1 -->
         <a href="https://sarahdurks.github.io/Run-Buddy" class="grid-item run-buddy">
           <div>
             <h3>RunBuddy</h3>
             <span>HTML, CSS</span>
           </div>
         </a>
+        <!-- Project #2 -->
         <a href="https://sarahdurks.github.io/horiseon-bootcamp/" class="grid-item horiseon">
           <div>
             <h3>Horiseon</h3>
             <span>HTML, CSS</span>
           </div>
         </a>
-
+        <!-- Project #3 -->
         <a href="https://www.actionnetwork.com/" class="grid-item navmenu">
           <div>
             <h3>Nav Menu</h3>
             <span>Placeholder</span>
           </div>
         </a>
-
+         <!-- Project #4 -->
         <a href="https://www.actionnetwork.com/about/" class="grid-item about">
           <div>
             <h3>About Page</h3>
             <span>Placeholder</span>
           </div>
         </a>
-
+         <!-- Project #5 -->
         <a href="#" class="grid-item games">
           <div>
             <h3>Games</h3>
             <span>Placeholder</span>
           </div>
         </a>
-    
+        <!-- Project #6 -->
         <a href="#" class="grid-item odds">
           <div>
             <h3>Odds</h3>
             <span>Placeholder</span>
           </div>
         </a>
-
       </div>
     </section>
 
@@ -101,22 +103,27 @@
       <h2>Contact Me</h2>
       <div>
         <address>
+          <!-- Github -->
             <a href="https://github.com/sarahdurks" target="_blank">
                 <i class="fab fa-github"></i>
                 GitHub
             </a>
+             <!-- LinkedIn -->
             <a href="https://www.linkedin.com/in/sarahdurks" target="_blank">
                 <i class="fab fa-linkedin"></i>
                 Linkedin
             </a>
+            <!-- Gitlab -->
             <a href="https://gitlab.com/sarahdurks" target="_blank">
               <i class="fab fa-gitlab"></i>
               GitLab
           </a>
+          <!-- Stack Overflow -->
           <a href="https://stackoverflow.com/users/15048540/sarahdurks" target="_blank">
             <i class="fab fa-stack-overflow"></i> Stack Overflow
           </a>
-              <a href="www.sarahdurkin.com" target="_blank"> My Website</a>
+          <!-- My Websiite -->
+              <a href="www.sarahdurkin.com" target="_blank"> www.sarahdurkin.com</a>
         </address>
       </div>
     </section>
