Figured out centered footer

--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
         </address>
       </div>
     </section>
+   <!-- Footer -->
+  <footer>
+   <p>Made with love by <a href="https://github.com/sarahdurks" target="_blank">sarahdurks</a> 🦁</p>
+  </footer>
   </main>
 </body>
 
