changed to google font, formatted/spacing updates

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>🦁 Sarah Durkin Portfolio | SEO & Full Stack in Training</title>
     <meta name="description" content="Sarah Durkin's demo portfolio for bootcamp.">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css" /> 
-    
     <script
-    src="https://use.fontawesome.com/releases/v5.15.2/js/all.js"
-    data-search-pseudo-elements
-  ></script>
+    src="https://use.fontawesome.com/releases/v5.15.2/js/all.js" data-search-pseudo-elements>
+    </script>
 </head>
 
 <body>
@@ -117,21 +117,23 @@
             <a href="https://gitlab.com/sarahdurks" target="_blank">
               <i class="fab fa-gitlab"></i>
               GitLab
-          </a>
-          <!-- Stack Overflow -->
-          <a href="https://stackoverflow.com/users/15048540/sarahdurks" target="_blank">
+            </a>
+            <!-- Stack Overflow -->
+            <a href="https://stackoverflow.com/users/15048540/sarahdurks" target="_blank">
             <i class="fab fa-stack-overflow"></i> Stack Overflow
+            </a>
+            <!-- My Websiite -->
+             <a href="www.sarahdurkin.com" target="_blank"> 
+            www.sarahdurkin.com
           </a>
-          <!-- My Websiite -->
-              <a href="www.sarahdurkin.com" target="_blank"> www.sarahdurkin.com</a>
         </address>
       </div>
     </section>
+
    <!-- Footer -->
   <footer>
    <p>Made with love by <a href="https://github.com/sarahdurks" target="_blank">sarahdurks</a> 🦁</p>
   </footer>
   </main>
 </body>
-
 </html>
