trying to fix font import

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>🦁 Sarah Durkin Portfolio | SEO & Full Stack in Training</title>
     <meta name="description" content="Sarah Durkin's demo portfolio for bootcamp.">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap');
+      </style>
     <link rel="stylesheet" href="./assets/css/style.css" /> 
     <script
     src="https://use.fontawesome.com/releases/v5.15.2/js/all.js" data-search-pseudo-elements>
