added links, updated readme

--- a/index.html
+++ b/index.html
@@ -43,20 +43,18 @@
       <h2>About Me</h2>
       <div>
         <p>
-          Nice to see you here! My name is Sarah Durkin. I'm Head of Search at The Action Network, and making this portfolio as part of UC Berkeley's Coding Bootcamp.
-
-          More to come as I build out this portfolio with fewer 'placeholder' projects.
+          Nice to see you here! My name is Sarah Durkin. I'm Head of Search at <a href="https://www.actionnetwork.com">The Action Network</a>, and making this portfolio as part of UC Berkeley's Coding Bootcamp.More to come as I build out this portfolio with fewer 'placeholder' projects.
         </p>
-    </section>
+    </section> 
 
     <!-- Portfolio Grid -->
     <section class="page-section" id="work">
-      <h2>Work</h2>
+      <h2>My Work</h2>
       <div class="grid-container">
         <!-- Feature Project #1 -->
         <a href="https://sarahdurks.github.io/Run-Buddy" class="grid-item run-buddy">
           <div>
-            <h3>RunBuddy</h3>
+            <h3>Run Buddy</h3>
             <span>HTML, CSS</span>
           </div>
         </a>
@@ -84,14 +82,14 @@
          <!-- Project #5 -->
         <a href="#" class="grid-item games">
           <div>
-            <h3>Games</h3>
+            <h3>Games Module</h3>
             <span>Placeholder</span>
           </div>
         </a>
         <!-- Project #6 -->
         <a href="#" class="grid-item odds">
           <div>
-            <h3>Odds</h3>
+            <h3>Odds Tool</h3>
             <span>Placeholder</span>
           </div>
         </a>
