updated bio copy

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>🦁 Sarah Durkin Portfolio | SEO & Full Stack in Training</title>
+    <title>Sarah Durkin Portfolio | SEO & Full Stack in Training</title>
+    <link rel="icon" href="./assets/images/lionfav.png">
     <meta name="description" content="Sarah Durkin's demo portfolio for bootcamp.">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap');
@@ -43,7 +44,7 @@
       <h2>About Me</h2>
       <div>
         <p>
-          Nice to see you here! My name is Sarah Durkin. I'm Head of Search at <a href="https://www.actionnetwork.com">The Action Network</a>, and making this portfolio as part of UC Berkeley's Coding Bootcamp. More to come as I build out this portfolio with fewer 'placeholder' projects.
+          Hey there! My name is Sarah Durkin. I'm Head of Search at <a href="https://www.actionnetwork.com">The Action Network</a>, and making this portfolio as part of UC Berkeley's Coding Bootcamp. More to come as I build out this application with fewer 'placeholder' projects.
         </p>
     </section> 
 
