updated website link

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <i class="fab fa-stack-overflow"></i> Stack Overflow
             </a>
             <!-- My Websiite -->
-             <a href="www.sarahdurkin.com" target="_blank"> 
+             <a href="https://www.sarahdurkin.com" target="_blank"> 
             www.sarahdurkin.com
           </a>
         </address>
