--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </a>
             <!-- My Websiite -->
              <a href="https://www.sarahdurkin.com" target="_blank"> 
-            www.sarahdurkin.com
+           My Website
           </a>
         </address>
       </div>
