--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
    <!-- Footer -->
   <footer>
-   <p>Made with love by <a href="https://github.com/sarahdurks" target="_blank">sarahdurks</a> 🦁</p>
+   <p>Made with ❤️ by <a href="https://github.com/sarahdurks" target="_blank">sarahdurks</a> 🦁</p>
   </footer>
   </main>
 </body>
